@@ -1,8 +1,11 @@
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.List;
 
 public class Scene {
-	static final int DIMENSION = 20;
-	private ArrayList<Layer> scene = new ArrayList<Layer>();
+	static int DIMENSION = 0;
+//	private List<Layer> scene = new ArrayList<Layer>();
+	private LinkedList<Layer> scene = new LinkedList<Layer>();
 	private Layer next;
 	
 	Scene(boolean left, boolean right) {
@@ -11,13 +14,16 @@ public class Scene {
 	}
 	
 	void updateNext(Layer layer) {
-		scene.add(next);
-		next = layer;
-		scene.remove(0);
+//		scene.add(next);
+//		next = layer;
+//		scene.remove(0);
+		scene.removeFirst();
+		scene.addLast(layer);
 	}
 	
 	Layer getTop() {
-		return scene.get(DIMENSION - 1);
+//		return scene.get(DIMENSION - 1);
+		return scene.getLast();
 	}
 	
 	public String toString() {
